# data-science-cookiecutter

./: .gitignore  README.rst  cookiecutter.json  pyproject.toml
tests/: test_projext_generation.py
{{ cookiecutter.project_slug }}/: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
{{ cookiecutter.project_slug }}/docker/: Dockerfile
{{ cookiecutter.project_slug }}/tests/: test_sample.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/docs/: index.md
