[tool.poetry]
name = "datascience-cookiecutter"
version = "0.1.0"
description = "A python cookiecutter application to create a new data science python project that uses poetry to manage its dependencies."
authors = ["Felix Gao <ggao@hotmail.com>"]
repository = "https://github.com/felixgao/data-science-cookiecutter"
documentation = "https://github.com/felixgao/data-science-cookiecutter"
readme = "README.md"
keywords = ['cookiecutter', 'template', 'poetry', 'data-science']
include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
]

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
      \.git                 # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | {{cookiecutter.project_slug}}
    | \.tox
  ))
'''

[tool.isort]
profile = "black"
skip = ["{{cookiecutter.project_slug}}",".venv"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
pytest-cookies = "^0.6.1"
tox = "^3.25.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
